# nuc-morph-analysis

./: .gitignore  FMS_data_cleanup_round1.py  LICENSE  README.md  pyproject.toml  run_all_manuscript_workflows.py
.github/actions/dependencies/: action.yml
.github/actions/pdm/: action.yml
.github/workflows/: cache-dependencies.yml  make-requirements.yml  run-workflows.yml  test.yml
docs/: INSTALL.md  feature_documentation.md  manifest-columns.md  pdm.md
nuc_morph_analysis/: default_config.yaml
nuc_morph_analysis/analyses/cell_health/: cell_health_functions.py  cell_health_plots.py  cell_health_workflow.py  lineage_manuscript_workflow_cell_health.py  trajectories_workflow_cell_health.py
nuc_morph_analysis/analyses/colony_area/: colony_area_workflow.py
nuc_morph_analysis/analyses/colony_context/: colony_context_analysis.py
nuc_morph_analysis/analyses/dataset_images_for_figures/: figure_dataset_channels_data_modalities.py  figure_dataset_colony_snapshots.py  figure_dataset_formation_and_breakdown.py  figure_dataset_processing_workflow.py  figure_dataset_save_3d_image_for_agave.py  figure_helper.py  glasbey_on_dark.py  run_all_figure_1_code.py
nuc_morph_analysis/analyses/density/: TEMP_new_density_features_for_TFE.py  draw_nucleus_contours_on_watershed.py  effect_of_resolution_level.py  figure_watershed_based_density_schematic.py  pseudocell_based_density.py  pseudocell_based_density_analysis.py  run_all_density_workflows.py  validate_new_filters.py  watershed_validate.py
nuc_morph_analysis/analyses/evaluate_filters_and_outliers/: evaluate_time_binning.py  growth_feature_outliers_workflow.py
nuc_morph_analysis/analyses/feeding_control/: feeding_control_manuscript_workflow.py  fov_shift_track_matching.py
nuc_morph_analysis/analyses/figure_5/: figure_5_analysis.py  mitotic_waves_analysis.py  std_surface_area.py  surface_area_at_05_colony_depth.py  validate_time_binning_approach.py
nuc_morph_analysis/analyses/height/: add_colony_time.py  calculate_features.py  centroid.py  height_workflow.py  plot.py  plot_crowding.py  toymodel.py
nuc_morph_analysis/analyses/inhibitors/: dataset_info.py  expansion_dynamics_workflow.py  late_growth_dynamics_workflow.py  match_and_filter.py  plotting.py  run_all_inhibitor_analysis_workflow.py
nuc_morph_analysis/analyses/lineage/: lineage_manuscript_workflow.py
nuc_morph_analysis/analyses/linear_regression/: analysis_plots.py  chantelle_linear_regression_workflow.py  linear_regression_workflow.py  linear_regression_workflow_greedy_removal.py  select_features.py  utils.py
nuc_morph_analysis/analyses/neighbor_of_X/: analyze_effect_of_mitotic_neighbors.py  example_dying_track_neighbors.py  example_mitotic_track_neighbors.py  example_of_tracks_with_multiple_mitotic_neighbors.py  example_timepoint_neighbors_of_dying.py  example_timepoint_numbers_of_mitotic.py  example_timepoint_of_neighbors_of_mitotic.py  labeling_neighbors_helper.py  run_all_example_worfklows.py
nuc_morph_analysis/analyses/segmentation_model_validation/: align_helper.py  quantitative_validation_workflow.py  seg_model_validation_figure_workflow.py  seg_model_validation_helper.py
nuc_morph_analysis/analyses/shape/: __init__.py
nuc_morph_analysis/analyses/volume/: add_growth_features.py  avg_transient_growth_analysis_workflow.py  local_growth_workflow.py  supplement_vis_transition_point_calculation_workflow.py  synchronized_tracks.py  trajectories_workflow.py
nuc_morph_analysis/analyses/volume_variation/: compensation_workflow.py  plot_features.py
nuc_morph_analysis/utilities/: __init__.py  analysis_utilities.py  viz_utilities.py  warn_slow.py  workflow_runner.py
requirements/linux/: requirements.txt
requirements/macos/: requirements.txt
test/utilities/: make_dummy_field.py
(+101 files in other folders)
